--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Vered Kurtz-David"
-  avatar           : "profile.jpeg"
+  avatar           : "profile.png"
   bio              : "PostDoc @ NYU"
   location         : "New York City"
   employer         :
