--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   soundcloud       :
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/i/flow/login?redirect_after_login=%2Fveredkurtz"
+  twitter          : "https://twitter.com/veredkurtz?s=20"
   vine             :
   weibo            :
   xing             :
