--- a/_config.yml
+++ b/_config.yml
@@ -98,12 +98,12 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://il.linkedin.com/in/vered-kurtz-0583a56a"
+  linkedin         : "https://www.linkedin.com/in/vered-kurtz/"
   pinterest        :
   soundcloud       :
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/veredkurtz?s=20"
+  twitter          : "https://twitter.com/veredkurtz"
   vine             :
   weibo            :
   xing             :
