--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/vered-kurtz/"
+  linkedin         : "vered-kurtz"
   pinterest        :
   soundcloud       :
   steam            :
