--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   soundcloud       :
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/veredkurtz"
+  twitter          : "veredkurtz"
   vine             :
   weibo            :
   xing             :
